--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -35,6 +35,9 @@ allprojects {
             url "https://maven.google.com"
         }
         maven {
+            url (unityProjectPath + "/Assets/Firebase/m2repository") // Assets/Firebase/Editor/AnalyticsDependencies.xml:20, Assets/Firebase/Editor/AppDependencies.xml:20
+        }
+        maven {
             url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
         }
         mavenLocal()
@@ -50,6 +53,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 // Android Resolver Dependencies Start
     implementation 'com.google.android.gms:play-services-ads:18.1.1' // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
+    implementation 'com.google.firebase:firebase-analytics:17.2.0' // Assets/Firebase/Editor/AppDependencies.xml:15
+    implementation 'com.google.firebase:firebase-analytics-unity:6.6.0' // Assets/Firebase/Editor/AnalyticsDependencies.xml:20
+    implementation 'com.google.firebase:firebase-app-unity:6.6.0' // Assets/Firebase/Editor/AppDependencies.xml:20
+    implementation 'com.google.firebase:firebase-common:19.1.0' // Assets/Firebase/Editor/AppDependencies.xml:13
+    implementation 'com.google.firebase:firebase-iid:[20.0.0]' // Assets/Firebase/Editor/AnalyticsDependencies.xml:15
 // Android Resolver Dependencies End
 **DEPS**}
 
